[package]
name = "kml"
version = "0.0.2"
authors = ["Pat Sier <pjsier@gmail.com>"]
description = "KML support for Rust"
readme = "README.md"
documentation = "https://docs.rs/kml/"
repository = "https://github.com/pjsier/kml"
license = "MIT"
edition = "2018"
keywords = ["geo", "geospatial", "kml"]
exclude = [".github/*"]

[dependencies]
quick-xml = { version = "0.20" }
num-traits = "0.2"
thiserror = "1.0"
geo-types = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
default = ["geo-types"]

[[bench]]
name = "parse"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
