[package]
name = "kml"
version = "0.8.2"
authors = ["Pat Sier <pjsier@gmail.com>", "The GeoRust Developers <mods@georust.org>"]
description = "KML support for Rust"
readme = "README.md"
documentation = "https://docs.rs/kml/"
repository = "https://github.com/georust/kml"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["science::geo"]
keywords = ["geo", "geospatial", "kml"]
exclude = [".github/*"]

[dependencies]
quick-xml = "0.28"
num-traits = "0.2"
thiserror = "1.0"
geo-types = { version = ">=0.6, <0.8", optional = true }
zip = { version = "0.6", optional = true, default-features = false, features = [
    "bzip2",
    "deflate",
    "time",
    "zstd",
] }

[dev-dependencies]
criterion = "0.4"

[features]
default = ["geo-types", "zip"]

[[bench]]
name = "parse"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
